--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
             <img src="./img/麦迪.jpg" alt="图片" width="362" height="333">
         </div>
     </div>
-
+    <div class="button">
+        <span>科比</span>
+        <span>雷.阿伦</span>
+        <span>麦迪</span>
+    </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
